test/snapshots/snapshots__swarm.snap
---
source: test/fixtures.rs
expression: output
---
budget: 4000 (3932 tokens)

README.md
     3→# Swarm (experimental, educational)
     5→> [!IMPORTANT]
     6→> Swarm is now replaced by the [OpenAI Agents SDK](https://github.com/openai/openai-agents-python), which is a production-ready evolution of Swarm. The Agents SDK features key improvements and will be actively maintained by the OpenAI team.
     7→>
     8→> We recommend migrating to the Agents SDK for all production use cases.
    10→## Install
    24→## Usage
    60→## Table of Contents
    72→# Overview
    74→Swarm focuses on making agent **coordination** and **execution** lightweight, highly controllable, and easily testable.
    75→
    76→It accomplishes this through two primitive abstractions: `Agent`s and **handoffs**. An `Agent` encompasses `instructions` and `tools`, and can at any point choose to hand off a conversation to another `Agent`.
    77→
    78→These primitives are powerful enough to express rich dynamics between tools and networks of agents, allowing you to build scalable, real-world solutions while avoiding a steep learning curve.
    79→
    80→> [!NOTE]
      →…
    83→## Why Swarm
    89→# Examples
    91→Check out `/examples` for inspiration! Learn more about each one in its README.
    92→
    93→- [`basic`](examples/basic): Simple examples of fundamentals like setup, function calling, handoffs, and context variables
    94→- [`triage_agent`](examples/triage_agent): Simple example of setting up a basic triage step to hand off to the right agent
    95→- [`weather_agent`](examples/weather_agent): Simple example of function calling
    96→- [`airline`](examples/airline): A multi-agent setup for handling different customer service requests in an airline context.
    97→- [`support_bot`](examples/support_bot): A customer service bot which includes a user interface agent and a help center agent with several tools
      →…
   100→# Documentation
   104→## Running Swarm
   114→### `client.run()`
   126→#### Arguments
   141→#### `Response` Fields
   149→## Agents
   155→## `Agent` Fields
   165→### Instructions
   197→## Functions
   229→### Handoffs and Updating Context Variables
   281→### Function Schemas
   321→## Streaming
   336→# Evaluations
   338→Evaluations are crucial to any project, and we encourage developers to bring their own eval suites to test the performance of their swarms. For reference, we have some examples for how to eval swarm in the `airline`, `weather_agent` and `triage_agent` quickstart examples. See the READMEs for more details.
   340→# Utils
   342→Use the `run_demo_loop` to test out your swarm! This will run a REPL on your command line. Supports streaming.
   343→
   344→```python
   345→from swarm.repl import run_demo_loop
   346→...
   347→run_demo_loop(agent, stream=True)
   348→```
   350→# Core Contributors
   352→- Ilan Bigio - [ibigio](https://github.com/ibigio)
   353→- James Hills - [jhills20](https://github.com/jhills20)
   354→- Shyamal Anadkat - [shyamal-anadkat](https://github.com/shyamal-anadkat)
   355→- Charu Jaiswal - [charuj](https://github.com/charuj)
   356→- Colin Jarvis - [colin-openai](https://github.com/colin-openai)
   357→- Katia Gil Guzman - [katia-openai](https://github.com/katia-openai)

assets/

logs/

pyproject.toml
     1→[build-system]
     2→requires = ["setuptools"]
     3→build-backend = "setuptools.build_meta"

setup.cfg
     1→[metadata]
     2→name = swarm
     3→version = 0.1.0
     4→author = OpenAI Solutions
     5→description = A lightweight, stateless multi-agent orchestration framework.
     6→long_description = file: README.md
     7→long_description_content_type = text/markdown
     8→license = MIT
     9→
    10→[options]
    11→packages = find:
      →…

SECURITY.md
     1→# Security Policy

examples/airline/README.md
     1→# Airline customer service
     6→## Agents
    14→## Setup
    22→## Evaluations

examples/airline/configs/agents.py
     9→def transfer_to_flight_modification():
    13→def transfer_to_flight_cancel():
    17→def transfer_to_flight_change():
    21→def transfer_to_lost_baggage():
    25→def transfer_to_triage():
    32→def triage_instructions(context_variables):

examples/airline/configs/tools.py
     1→def escalate_to_agent(reason=None):
     5→def valid_to_change_flight():
     9→def change_flight():
    13→def initiate_refund():
    18→def initiate_flight_credits():
    23→def case_resolved():
    27→def initiate_baggage_search():

examples/airline/data/routines/baggage/policies.py
     1→# Atlas
      →…
     3→STARTER_PROMPT = """You are an intelligent and empathetic customer support representative for Fly Airlines customers .
    21→LOST_BAGGAGE_POLICY = """

examples/airline/data/routines/flight_modification/policies.py
     2→STARTER_PROMPT = """You are an intelligent and empathetic customer support representative for Fly Airlines customers .
    20→FLIGHT_CANCELLATION_POLICY = f"""
    33→FLIGHT_CHANGE_POLICY = f"""

examples/airline/evals/eval_cases/flight_modification_cases.json
     1→[

examples/airline/evals/eval_cases/triage_cases.json
     1→[

examples/airline/evals/eval_utils.py
     8→def run_function_evals(agent, test_cases, n=1, eval_path=None):
    98→def extract_response_info(response):

examples/basic/README.md
     1→# Swarm basic
    31→## Running the Examples
    33→To run any of the examples, use the following command:
    34→
    35→```shell
    36→python3 <example_name>.py
    37→```

examples/basic/agent_handoff.py
    16→def transfer_to_spanish_agent():

examples/basic/context_variables.py
     6→def instructions(context_variables):
    11→def print_account_details(context_variables: dict):

examples/basic/function_calling.py
     6→def get_weather(location) -> str:

examples/basic/simple_loop_no_helpers.py
    11→def pretty_print_messages(messages):

examples/customer_service_streaming/configs/assistants/user_interface/assistant.json
     1→[
     2→    {
      →    …

examples/customer_service_streaming/configs/general.py
     1→class Colors:
     2→    HEADER = '\033[95m'
     3→    OKBLUE = '\033[94m'
     4→    OKCYAN = '\033[96m'
     5→    OKGREEN = '\033[92m'
     6→    WARNING = '\033[93m'
     7→    RED = '\033[91m'
     8→    ENDC = '\033[0m'
     9→    BOLD = '\033[1m'
    10→    UNDERLINE = '\033[4m'
    11→    GREY = '\033[90m'

examples/customer_service_streaming/configs/prompts.py
     1→TRIAGE_MESSAGE_PROMPT …
     2→TRIAGE_SYSTEM_PROMPT …
     3→EVAL_GROUNDTRUTH_PROMPT …
     4→EVAL_ASSISTANT_PROMPT …
     5→EVAL_PLANNING_PROMPT …
     6→ITERATE_PROMPT …
     7→EVALUATE_TASK_PROMPT …
    15→# IMPORTANT: If you are missing
      →…
    19→LOCAL_PLANNER_PROMPT = """

examples/customer_service_streaming/configs/swarm_tasks.json
     1→[
     2→  {
     3→    "description": "What is the square root of 16?"
     4→  },
     5→  {
     6→    "description": "Is phone verification required for new OpenAI account creation or ChatGPT usage",
     7→    "evaluate": true
     8→  },
     9→  {
      →  …

examples/customer_service_streaming/main.py
    10→def main():

examples/customer_service_streaming/prep_data.py
     6→GPT_MODEL = 'gpt-4'
     7→EMBEDDING_MODEL = "text-embedding-3-large"

examples/customer_service_streaming/src/arg_parser.py
     3→def parse_args …

examples/customer_service_streaming/src/evals/eval_function.py
     8→class EvalFunction:
     9→
    10→  def __init__(self, client, plan, task):
    17→  def default(self):
    23→  def numeric(self):
    42→  def name(self):
    67→  def evaluate(self):

examples/customer_service_streaming/src/runs/run.py
     5→class Run:
     6→    def __init__(self,assistant,request,client):
    14→    def initiate(self, planner):
    20→    def generate_plan(self,task=None):

examples/customer_service_streaming/src/swarm/engines/engine.py
     1→# engine.py
     2→class Engine:

examples/customer_service_streaming/src/swarm/engines/local_engine.py
   379→             #assistant.print_conversation()
   381→    def load_test_tasks(self, test_file_paths):

examples/customer_service_streaming/src/swarm/swarm.py
    11→class Swarm:

examples/customer_service_streaming/src/tasks/task.py
     3→class Task:
    12→class EvaluationTask(Task):

examples/customer_service_streaming/src/utils.py
     1→def get_completion …
    39→def is_dict_empty …

examples/customer_service_streaming/src/validator.py
     7→def validate_tool …
    12→def validate_all_tools …
    51→    # Function to validate all assistants
    52→def validate_all_assistants():

examples/customer_service_streaming/tests/test_prompts.jsonl
     1→{"text": "Explain the DALL-E editor interface?", "expected_assistant": "user_interface"}

examples/personal_shopper/README.md
     1→# Personal shopper
     3→This Swarm is a personal shopping agent that can help with making sales and refunding orders.
      →…
     7→## Overview
    15→## Setup

examples/personal_shopper/database.py
     7→def get_connection():
    14→def create_database():
    61→def add_user(user_id, first_name, last_name, email, phone):
    84→def add_purchase(user_id, date_of_purchase, item_id, amount):
   114→def add_product(product_id, product_name, price):
   132→def close_connection():
   139→def preview_table(table_name):
   153→# Initialize and load database
   154→def initialize_database():

examples/personal_shopper/main.py
    10→def refund_item(user_id, item_id):
    32→def notify_customer(user_id, method):
    58→def order_item(user_id, product_id):

examples/support_bot/Makefile
     1→install:
     2→	 pip3 install -r requirements.txt
     3→prep:
     4→	 python3 prep_data.py
     5→run:
     6→	 PYTHONPATH=../.. python3 -m main

examples/support_bot/README.md
     1→# Support bot
     6→## Overview
    13→## Setup

examples/support_bot/customer_service.py
    13→# Set embedding model
    14→EMBEDDING_MODEL = "text-embedding-3-large"
    20→# TODO: Make this work
    23→def query_qdrant(query, collection_name, vector_name="article", top_k=5):
    43→def query_docs(query):
    68→def send_email(email_address, message):
    73→def submit_ticket(description):
    90→def transfer_to_help_center():

examples/support_bot/main.py
    13→# Set embedding model
    14→EMBEDDING_MODEL = "text-embedding-3-large"
    20→def query_qdrant(query, collection_name, vector_name="article", top_k=5):
    40→def query_docs(query):
    66→def send_email(email_address, message):
    72→def submit_ticket(description):
    77→def transfer_to_help_center():

examples/support_bot/prep_data.py
    10→GPT_MODEL = "gpt-4o"
    11→EMBEDDING_MODEL = "text-embedding-3-large"

examples/triage_agent/README.md
     1→# Triage agent
     3→This example is a Swarm containing a triage agent, which takes in user inputs and chooses whether to respond directly, or triage the request
     4→to a sales or refunds agent.
     6→## Setup
    16→## Evals

examples/triage_agent/agents.py
     4→def process_refund(item_id, reason="NOT SPECIFIED"):
    10→def apply_discount():
    31→def transfer_back_to_triage():
    36→def transfer_to_sales():
    40→def transfer_to_refunds():

examples/triage_agent/evals.py
     9→CONVERSATIONAL_EVAL_SYSTEM_PROMPT = """
    19→def conversation_was_successful(messages) -> bool:
    27→def run_and_get_tool_calls(agent, query):
    44→def test_triage_agent_calls_correct_function(query, function_name):
    68→def test_conversation_is_successful(messages):

examples/triage_agent/evals_util.py
     9→class BoolEvalResult(BaseModel):
    10→    value: bool
    11→    reason: Optional[str]
    14→def evaluate_with_llm_bool(instruction, data) -> BoolEvalResult:

examples/weather_agent/README.md
     1→# Weather agent
     5→## Setup
    15→## Evals

examples/weather_agent/agents.py
     6→def get_weather(location, time="now"):
    11→def send_email(recipient, subject, body):

examples/weather_agent/evals.py
     8→def run_and_get_tool_calls(agent, query):
    26→def test_calls_weather_when_asked(query):
    41→def test_does_not_call_weather_when_not_asked(query):

swarm/__init__.py
     4→__all__ = ["Swarm", "Agent", "Response"]

swarm/core.py
    23→__CTX_VARS_NAME__ = "context_variables"
    26→class Swarm:
    27→    def __init__ …
    32→    def get_chat_completion …
    71→    def handle_function_result …
    89→    def handle_tool_calls …
   139→    def run_and_stream …
   231→    def run …

swarm/repl/repl.py
     6→def process_and_print_streaming_response(response):
    37→def pretty_print_messages(messages) -> None:
    60→def run_demo_loop(
    61→    starting_agent, context_variables=None, stream=False, debug=False
    62→) -> None:

swarm/types.py
    14→class Agent(BaseModel):
    15→    name: str = "Agent"
    16→    model: str = "gpt-4o"
    17→    instructions: Union[str, Callable[[], str]] = "You are a helpful agent."
    18→    functions: List[AgentFunction] = []
    19→    tool_choice: str = None
    20→    parallel_tool_calls: bool = True
    23→class Response(BaseModel):
    24→    messages: List = []
    25→    agent: Optional[Agent] = None
    26→    context_variables: dict = {}
    29→class Result(BaseModel):
    30→    """
    31→    Encapsulates the possible return values for an agent function.
    32→
    33→    Attributes:
      →    …
    38→
    39→    value: str = ""
    40→    agent: Optional[Agent] = None
    41→    context_variables: dict = {}

swarm/util.py
     5→def debug_print …
    13→def merge_fields …
    21→def merge_chunk …
    31→def function_to_json …

tests/mock_client.py
    44→class MockOpenAIClient:

tests/test_core.py
     7→DEFAULT_RESPONSE_CONTENT = "sample response content"
    10→@pytest.fixture
    11→def mock_openai_client():
