test/snapshots/snapshots__thiserror.snap
---
source: test/fixtures.rs
expression: output
---
README.md
     1→derive(Error)
     4→[<img alt="github" src="https://img.shields.io/badge/github-dtolnay/thiserror-8da0cb?style=for-the-badge&labelColor=555555&logo=github" height="20">](https://github.com/dtolnay/thiserror)
     5→[<img alt="crates.io" src="https://img.shields.io/crates/v/thiserror.svg?style=for-the-badge&color=fc8d62&logo=rust" height="20">](https://crates.io/crates/thiserror)
     6→[<img alt="docs.rs" src="https://img.shields.io/badge/docs.rs-thiserror-66c2a5?style=for-the-badge&labelColor=555555&logo=docs.rs" height="20">](https://docs.rs/thiserror)
     7→[<img alt="build status" src="https://img.shields.io/github/actions/workflow/status/dtolnay/thiserror/ci.yml?branch=master&style=for-the-badge" height="20">](https://github.com/dtolnay/thiserror/actions?query=branch%3Amaster)
     8→
     9→This library provides a convenient derive macro for the standard library's
    10→[`std::error::Error`] trait.
    11→
    12→[`std::error::Error`]: https://doc.rust-lang.org/std/error/trait.Error.html
    13→
    14→```toml
    15→[dependencies]
    21→## Example
    44→## Details
   211→## Comparison to anyhow
   223→#### License

build/probe.rs
    11→struct MyError …
    12→struct Thing …
    14→impl Debug for MyError …
    15→    fn fmt …
    20→impl Display for MyError …
    21→    fn fmt …
    26→impl Error for MyError …
    27→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
    28→        request.provide_ref(&self.0);
    29→    }

Cargo.toml
     1→[package]
     2→name = "thiserror"
     3→version = "2.0.18"
     4→authors = ["David Tolnay <dtolnay@gmail.com>"]
     5→categories = ["rust-patterns", "no-std"]
     6→description = "derive(Error)"
     7→documentation = "https://docs.rs/thiserror"
     8→edition = "2021"
     9→keywords = ["error", "error-handling", "derive"]
    10→license = "MIT OR Apache-2.0"
    11→repository = "https://github.com/dtolnay/thiserror"
    12→rust-version = "1.71"
    13→
    14→[features]
    15→default = ["std"]
    16→
    17→# Std feature enables support for formatting std::path::{Path, PathBuf}
    18→# conveniently in an error message.
    19→#
    20→#     #[derive(Error, Debug)]
    21→#     #[error("failed to create configuration file {path}")]
    22→#     pub struct MyError {
    23→#         pub path: PathBuf,
    24→#         pub source: std::io::Error,
    25→#     }
    26→#
    27→# Without std, this would need to be written #[error("... {}", path.display())].
    28→std = []
    29→
    30→[dependencies]
    31→thiserror-impl = { version = "=2.0.18", path = "impl" }
    32→
    33→[dev-dependencies]
    34→anyhow = "1.0.73"
    35→ref-cast = "1.0.18"
    36→rustversion = "1.0.13"
    37→trybuild = { version = "1.0.108", features = ["diff"] }
    38→
    39→[workspace]
    40→members = ["impl", "tests/no-std"]
    41→
    42→[package.metadata.docs.rs]

impl/Cargo.toml
     1→[package]
     2→name = "thiserror-impl"
     3→version = "2.0.18"
     4→authors = ["David Tolnay <dtolnay@gmail.com>"]
     5→description = "Implementation detail of the `thiserror` crate"
     6→edition = "2021"
     7→license = "MIT OR Apache-2.0"
     8→repository = "https://github.com/dtolnay/thiserror"
     9→rust-version = "1.71"
    10→
    11→[lib]
    12→proc-macro = true
    13→
    14→[dependencies]
    15→proc-macro2 = "1.0.74"
    16→quote = "1.0.35"
    17→syn = "2.0.87"
    18→
    19→[package.metadata.docs.rs]

src/aserror.rs
     5→pub trait AsDynError …
     6→    fn as_dyn_error(&self) -> &(dyn Error + 'a);
     9→impl<'a, T: Error + 'a> AsDynError<'a> for T …
    11→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    16→impl<'a> AsDynError<'a> for dyn Error + 'a …
    18→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    23→impl<'a> AsDynError<'a> for dyn Error + Send + 'a …
    25→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    30→impl<'a> AsDynError<'a> for dyn Error + Send + Sync + 'a …
    32→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    37→impl<'a> AsDynError<'a> for dyn Error + Send + Sync + UnwindSafe + 'a …
    39→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    45→pub trait Sealed …
    46→impl<T: Error> Sealed for T …
    47→impl Sealed for dyn Error + '_ …
    48→impl Sealed for dyn Error + Send + '_ …
    49→impl Sealed for dyn Error + Send + Sync + '_ …
    50→impl Sealed for dyn Error + Send + Sync + UnwindSafe + '_ …

src/display.rs
     6→pub trait AsDisplay …
    11→    fn as_display(&'a self) -> Self::Target;
    14→impl<'a, T> AsDisplay<'a> for &T …
    20→    fn as_display(&'a self) -> Self::Target {
    26→impl<'a> AsDisplay<'a> for Path …
    30→    fn as_display(&'a self) -> Self::Target {
    36→impl<'a> AsDisplay<'a> for PathBuf …
    40→    fn as_display(&'a self) -> Self::Target {
    46→pub trait Sealed …
    47→impl<T: Display + ?Sized> Sealed for &T …
    49→impl Sealed for Path …
    51→impl Sealed for PathBuf …
    60→    use super::{AsDisplay, Sealed};
    64→    pub struct Placeholder …
    66→    impl<'a> AsDisplay<'a> for Placeholder …
    70→        fn as_display(&'a self) -> Self::Target {
    75→    impl Display for Placeholder …
    76→        fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    81→    impl Sealed for Placeholder …

src/lib.rs
     9→//! This library provides a convenient derive macro for the standard library's
   281→mod aserror;
   282→mod display;
   284→mod provide;
   285→mod var;
   289→mod private;

src/private.rs
     2→pub use crate::aserror::AsDynError;
     4→pub use crate::display::AsDisplay;
     7→pub use crate::provide::ThiserrorProvide;
     9→pub use crate::var::Var;

src/provide.rs
     4→pub trait ThiserrorProvide …
     5→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>);
     8→impl<T> ThiserrorProvide for T …
    13→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>) {
    19→pub trait Sealed …
    20→impl<T: Error + ?Sized> Sealed for T …

src/var.rs
     3→pub struct Var …
     5→impl<'a, T: Pointer + ?Sized> Pointer for Var<'a, T> …
     6→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {

impl/src/ast.rs
    10→pub enum Input …
    11→    Struct(Struct<'a>),
    12→    Enum(Enum<'a>),
    13→}
    15→pub struct Struct …
    22→pub struct Enum …
    29→pub struct Variant …
    36→pub struct Field …
    45→pub enum ContainerKind …
    46→    Struct,
    47→    TupleStruct,
    48→    UnitStruct,
    49→    StructVariant,
    50→    TupleVariant,
    51→    UnitVariant,
    52→}
    54→impl<'a> Input<'a> …
    55→    pub fn from_syn(node: &'a DeriveInput) -> Result<Self> {
    67→impl<'a> Struct<'a> …
    85→impl<'a> Enum<'a> …
   118→impl<'a> Variant<'a> …
   130→impl<'a> Field<'a> …
   156→impl ContainerKind …
   174→impl Display for ContainerKind …

impl/src/attr.rs
    11→pub struct Attrs …
    21→pub struct Display …
    33→pub struct Source …
    39→pub struct From …
    45→pub struct Transparent …
    51→pub struct Fmt …
    57→pub enum Trait …
    58→    Debug,
    59→    Display,
    60→    Octal,
    61→    LowerHex,
    62→    UpperHex,
    63→    Pointer,
    64→    Binary,
    65→    LowerExp,
    66→    UpperExp,
    67→}
    69→pub fn get(input: &[Attribute]) -> Result<Attrs> {
   124→fn parse_error_attribute …
   196→fn parse_token_expr …
   302→impl ToTokens for Display<'_> …
   303→    fn to_tokens(&self, tokens: &mut TokenStream) {
   342→impl ToTokens for Trait …
   343→    fn to_tokens(&self, tokens: &mut TokenStream) {

impl/src/expand.rs
    12→pub fn derive(input: &DeriveInput) -> TokenStream {
    22→fn try_expand …
    31→fn impl_struct …
   221→fn impl_enum …
   505→pub(crate) fn call_site_ident …
   511→fn fields_pat …
   526→fn use_as_display …
   536→fn from_initializer …
   565→fn type_is_option …
   569→fn unoptional_type …
   574→fn type_parameter_of_option …

impl/src/fallback.rs
     7→pub(crate) fn expand …

impl/src/fmt.rs
    15→impl Display<'_> …
    16→    pub fn expand_shorthand(&mut self, fields: &[Field], container: ContainerKind) -> Result<()> {
   166→struct FmtArguments …
   167→    named: BTreeSet<IdentUnraw>,
   168→    first_unnamed: Option<TokenStream>,
   169→}
   172→fn explicit_named_args …
   192→fn try_explicit_named_args …
   231→fn fallback_explicit_named_args …
   255→fn is_syn_full …
   273→fn take_int …
   286→fn take_ident …
   299→fn between …

impl/src/generics.rs
     8→pub struct ParamsInScope …
    12→impl<'a> ParamsInScope<'a> …
    13→    pub fn new(generics: &'a Generics) -> Self {
    19→    pub fn intersects(&self, ty: &Type) -> bool {
    26→fn crawl …
    48→pub struct InferredBounds …
    53→impl InferredBounds …
    54→    pub fn new() -> Self {
    61→    pub fn insert(&mut self, ty: impl ToTokens, bound: impl ToTokens) {
    74→    pub fn augment_where_clause(&self, generics: &Generics) -> WhereClause {

impl/src/lib.rs
    40→pub fn derive_error(input: TokenStream) -> TokenStream {
    46→struct private …
    48→impl ToTokens for private …
    49→    fn to_tokens(&self, tokens: &mut proc_macro2::TokenStream) {

impl/src/prop.rs
     6→impl Struct<'_> …
    25→impl Enum<'_> …
    53→impl Variant<'_> …
    72→impl Field<'_> …
    88→fn from_field …
    97→fn source_field …
   112→fn backtrace_field …
   127→fn distinct_backtrace_field …
   138→fn type_is_backtrace …

impl/src/scan_expr.rs
     6→enum Input …
    25→enum Action …
    32→static INIT …
    63→static POSTFIX …
    76→static ASYNC …
    82→static BLOCK …
    84→static BREAK_LABEL …
    89→static BREAK_VALUE …
    95→static CLOSURE …
   104→static CLOSURE_ARGS …
   109→static CLOSURE_RET …
   114→static CONST …
   119→static CONTINUE …
   124→static DOT …
   130→static FOR …
   135→static IF_ELSE …
   136→static IF_THEN …
   139→static METHOD …
   141→static PATH …
   148→static PATTERN …
   166→static RANGE …
   175→static RAW …
   181→static REFERENCE …
   187→static RETURN …
   192→pub(crate) fn scan_expr …

impl/src/unraw.rs
    12→pub struct IdentUnraw …
    14→impl IdentUnraw …
    15→    pub fn new(ident: Ident) -> Self {
    19→    pub fn to_local(&self) -> Ident {
    32→    pub fn set_span(&mut self, span: Span) {
    37→impl Display for IdentUnraw …
    43→impl Eq for IdentUnraw …
    45→impl PartialEq for IdentUnraw …
    51→impl PartialEq<str> for IdentUnraw …
    57→impl Ord for IdentUnraw …
    63→impl PartialOrd for IdentUnraw …
    69→impl Parse for IdentUnraw …
    70→    fn parse(input: ParseStream) -> Result<Self> {
    75→impl ToTokens for IdentUnraw …
    76→    fn to_tokens(&self, tokens: &mut TokenStream) {
    82→pub enum MemberUnraw …
    83→    Named(IdentUnraw),
    84→    Unnamed(Index),
    85→}
    87→impl MemberUnraw …
    88→    pub fn span(&self) -> Span {
    96→impl Display for MemberUnraw …
   105→impl Eq for MemberUnraw …
   107→impl PartialEq for MemberUnraw …
   117→impl PartialEq<str> for MemberUnraw …
   126→impl Hash for MemberUnraw …
   135→impl ToTokens for MemberUnraw …
   136→    fn to_tokens(&self, tokens: &mut TokenStream) {

impl/src/valid.rs
     5→impl Input<'_> …
    14→impl Struct<'_> …
    45→impl Enum<'_> …
    66→impl Variant<'_> …
    91→impl Field<'_> …
   109→fn check_non_field_attrs …
   151→fn check_field_attrs …
   224→fn contains_non_static_lifetime …

build.rs
    10→const PRIVATE …

rust-toolchain.toml
     1→[toolchain]
     2→components = ["rust-src"]

tests/test_display.rs
   417→    pub fn octal …

tests/no-std/

tests/ui/
