test/snapshots/snapshots__thiserror_impl_src.snap
---
source: test/fixtures.rs
expression: output
---
ast.rs
    10→pub enum Input …
    11→    Struct(Struct<'a>),
    12→    Enum(Enum<'a>),
    13→}
    15→pub struct Struct …
    22→pub struct Enum …
    29→pub struct Variant …
    36→pub struct Field …
    45→pub enum ContainerKind …
    46→    Struct,
    47→    TupleStruct,
    48→    UnitStruct,
    49→    StructVariant,
    50→    TupleVariant,
    51→    UnitVariant,
    52→}
    54→impl<'a> Input<'a> …
    55→    pub fn from_syn(node: &'a DeriveInput) -> Result<Self> {
    67→impl<'a> Struct<'a> …
    68→    fn from_syn …
    85→impl<'a> Enum<'a> …
    86→    fn from_syn …
   118→impl<'a> Variant<'a> …
   119→    fn from_syn …
   130→impl<'a> Field<'a> …
   131→    fn multiple_from_syn …
   139→    fn from_syn …
   156→impl ContainerKind …
   157→    fn from_struct …
   165→    fn from_variant …
   174→impl Display for ContainerKind …
   175→    fn fmt …

attr.rs
    11→pub struct Attrs …
    21→pub struct Display …
    33→pub struct Source …
    39→pub struct From …
    45→pub struct Transparent …
    51→pub struct Fmt …
    57→pub enum Trait …
    58→    Debug,
    59→    Display,
    60→    Octal,
    61→    LowerHex,
    62→    UpperHex,
    63→    Pointer,
    64→    Binary,
    65→    LowerExp,
    66→    UpperExp,
    67→}
    69→pub fn get(input: &[Attribute]) -> Result<Attrs> {
   302→impl ToTokens for Display<'_> …
   303→    fn to_tokens …
   342→impl ToTokens for Trait …
   343→    fn to_tokens …

expand.rs
    12→pub fn derive(input: &DeriveInput) -> TokenStream {
   505→pub(crate) fn call_site_ident(ident: &Ident) -> Ident {

fallback.rs
     7→pub(crate) fn expand(input: &DeriveInput, error: syn::Error) -> TokenStream {

fmt.rs
    15→impl Display<'_> …
    16→    pub fn expand_shorthand(&mut self, fields: &[Field], container: ContainerKind) -> Result<()> {
   166→struct FmtArguments …
   167→    named: BTreeSet<IdentUnraw>,
   168→    first_unnamed: Option<TokenStream>,
   169→}

generics.rs
     8→pub struct ParamsInScope …
    12→impl<'a> ParamsInScope<'a> …
    13→    pub fn new(generics: &'a Generics) -> Self {
    19→    pub fn intersects(&self, ty: &Type) -> bool {
    48→pub struct InferredBounds …
    53→impl InferredBounds …
    54→    pub fn new() -> Self {
    61→    pub fn insert(&mut self, ty: impl ToTokens, bound: impl ToTokens) {
    74→    pub fn augment_where_clause(&self, generics: &Generics) -> WhereClause {

lib.rs
    40→pub fn derive_error(input: TokenStream) -> TokenStream {
    46→struct private …
    48→impl ToTokens for private …
    49→    fn to_tokens …

prop.rs
     6→impl Struct<'_> …
     7→    pub(crate) fn from_field(&self) -> Option<&Field> {
    11→    pub(crate) fn source_field(&self) -> Option<&Field> {
    15→    pub(crate) fn backtrace_field(&self) -> Option<&Field> {
    19→    pub(crate) fn distinct_backtrace_field(&self) -> Option<&Field> {
    25→impl Enum<'_> …
    26→    pub(crate) fn has_source(&self) -> bool {
    32→    pub(crate) fn has_backtrace(&self) -> bool {
    38→    pub(crate) fn has_display(&self) -> bool {
    53→impl Variant<'_> …
    54→    pub(crate) fn from_field(&self) -> Option<&Field> {
    58→    pub(crate) fn source_field(&self) -> Option<&Field> {
    62→    pub(crate) fn backtrace_field(&self) -> Option<&Field> {
    66→    pub(crate) fn distinct_backtrace_field(&self) -> Option<&Field> {
    72→impl Field<'_> …
    73→    pub(crate) fn is_backtrace(&self) -> bool {
    77→    pub(crate) fn source_span(&self) -> Span {

scan_expr.rs
     6→enum Input …
    25→enum Action …
    32→static INIT …
    63→static POSTFIX …
    76→static ASYNC …
    82→static BLOCK …
    84→static BREAK_LABEL …
    89→static BREAK_VALUE …
    95→static CLOSURE …
   104→static CLOSURE_ARGS …
   109→static CLOSURE_RET …
   114→static CONST …
   119→static CONTINUE …
   124→static DOT …
   130→static FOR …
   135→static IF_ELSE …
   136→static IF_THEN …
   139→static METHOD …
   141→static PATH …
   148→static PATTERN …
   166→static RANGE …
   175→static RAW …
   181→static REFERENCE …
   187→static RETURN …
   192→pub(crate) fn scan_expr(input: ParseStream) -> Result<()> {

unraw.rs
    12→pub struct IdentUnraw …
    14→impl IdentUnraw …
    15→    pub fn new(ident: Ident) -> Self {
    19→    pub fn to_local(&self) -> Ident {
    32→    pub fn set_span(&mut self, span: Span) {
    37→impl Display for IdentUnraw …
    38→    fn fmt …
    43→impl Eq for IdentUnraw …
    45→impl PartialEq for IdentUnraw …
    46→    fn eq …
    51→impl PartialEq<str> for IdentUnraw …
    52→    fn eq …
    57→impl Ord for IdentUnraw …
    58→    fn cmp …
    63→impl PartialOrd for IdentUnraw …
    64→    fn partial_cmp …
    69→impl Parse for IdentUnraw …
    70→    fn parse …
    75→impl ToTokens for IdentUnraw …
    76→    fn to_tokens …
    82→pub enum MemberUnraw …
    83→    Named(IdentUnraw),
    84→    Unnamed(Index),
    85→}
    87→impl MemberUnraw …
    88→    pub fn span(&self) -> Span {
    96→impl Display for MemberUnraw …
    97→    fn fmt …
   105→impl Eq for MemberUnraw …
   107→impl PartialEq for MemberUnraw …
   108→    fn eq …
   117→impl PartialEq<str> for MemberUnraw …
   118→    fn eq …
   126→impl Hash for MemberUnraw …
   127→    fn hash …
   135→impl ToTokens for MemberUnraw …
   136→    fn to_tokens …

valid.rs
     5→impl Input<'_> …
     6→    pub(crate) fn validate(&self) -> Result<()> {
    14→impl Struct<'_> …
    15→    fn validate …
    45→impl Enum<'_> …
    46→    fn validate …
    66→impl Variant<'_> …
    67→    fn validate …
    91→impl Field<'_> …
    92→    fn validate …
